.gradle/gradle.log
****************************
 Powered By MCP:             
 http://modcoderpack.com/    
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Users\David\Documents\JavaStuff\Forge\oc_dcpu\build\sources\java\com\gorzoid\dcpu\CustomArchitecture.java:52: error: strings in switch are not supported in -source 1.6
            switch(v)
                  ^
  (use -source 7 or higher to enable strings in switch)
C:\Users\David\Documents\JavaStuff\Forge\oc_dcpu\build\sources\java\com\gorzoid\dcpu\CustomArchitecture.java:138: error: strings in switch are not supported in -source 1.6
		switch(signal.name())
		      ^
  (use -source 7 or higher to enable strings in switch)
2 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 12.5 secs
